# cookiecutter-django-demo

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.repo_name}}/: manage.py
{{cookiecutter.project_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: asgi.py  settings.py  urls.py  wsgi.py
